fixed slider visibility

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -69,6 +69,11 @@ p
     h2
         margin: 0 0 22px 0
 
+.slider
+    visibility: hidden
+.slick-initialized 
+    visibility: visible
+
 .os_icons
     margin: 42px 0 0 0
     svg
